Switch to SDL instead of GLFW, Implement PPU further (with OBJ and window now), Implement all opcodes, Implement MBC1/2/3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,9 @@ cmake_minimum_required(VERSION 3.2)
 project(NEC VERSION 0.0.0.0 LANGUAGES C)
 
 # Ansi c
-set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_C_EXTENSIONS OFF)
-
-# Set output directories
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
 # Check if debug
 set(IS_DEBUG 1)
@@ -24,6 +19,9 @@ configure_file(
         "${CMAKE_SOURCE_DIR}/config.h.in"
         "${CMAKE_SOURCE_DIR}/include/config.h"
 )
+
+include_directories(${CMAKE_SOURCE_DIR}/include)
+link_directories(${CMAKE_SOURCE_DIR}/lib)
 
 # Setup testing framework
 option(NEC_TESTING "" ON)
