--- a/src/GB/CMakeLists.txt
+++ b/src/GB/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.2)
 project(GB VERSION 0.1.0.0 LANGUAGES C)
 
-add_library(GB GB.c LR35902.c MMU.c PPU.c timer.c audio.c joypad.c serial.c cartridge.c display.c sound.c)
-target_link_libraries(GB ${GRAPHICS_LIBRARIES})
+add_library(GB GB.c LR35902.c MMU.c PPU.c timer.c sound.c joypad.c serial.c cartridge.c display.c audio.c)
+target_link_libraries(GB ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${SDL2_LIBRARIES})
 
 option(NEC_GB_TESTING "" ${NEC_TESTING})
 
